crates/pardosa-schema/tests/compile_fail/array_usize.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
struct Bad {
    counts: [usize; 4],
}
fn main() {}
