crates/pardosa-schema/tests/compile_fail/array_usize.stderr
error: EVT-004: GenomeSafe: usize has platform-dependent size. Use u32/u64 for portable serialization.
 --> tests/compile_fail/array_usize.rs:4:14
  |
4 |     counts: [usize; 4],
  |              ^^^^^
